--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "license": "ISC",
   "private": true,
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "prettier --write --ignore-unknown \"**/*\""
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "prettier": "^2.8.3"
   },
   "author": {
     "name": "Anderson Roberto Slivinski",
