--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "private": true,
   "scripts": {
     "prepare": "husky install",
-    "format": "prettier --write --ignore-unknown \"**/*\""
+    "format": "prettier --write --ignore-unknown \"**/*\"",
+    "lint": "eslint --ext=js ./"
   },
   "devDependencies": {
+    "@arslivinski/eslint-config": "^1.0.0-alpha.16",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "eslint": "^8.32.0",
     "husky": "^8.0.3",
     "prettier": "^2.8.3"
   },
