--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@commitlint/config-conventional": "^17.4.2",
     "eslint": "^8.32.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.3"
   },
   "author": {
